# Django-Assginment

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
app/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py
config/: settings.py  urls.py
djangoProject2/: asgi.py  settings.py  urls.py  wsgi.py
member/: views.py
templates/: index.html  login.html  signup.html  todo_info.html  todo_list.html  user_info.html  user_list.html
templates/todo/: base.html  todo_create.html  todo_info.html  todo_list.html  todo_update.html
